# rocm-systems

./: .clangd  .cmake-format  .git-blame-ignore-revs  .gitmodules  .pre-commit-config.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  aqlprof-backward-compat.cmake  build.sh  migration.md  pyproject.toml
.azuredevops/: rdc.yml  rocm-core.yml  (+10 more)
amdsmi/example/: CMakeLists.txt
examples/streams/: CMakeLists.txt  streams.cpp
projects/aqlprofile/test/pm4-packets-regression-tests/: CMakeLists.txt  conftest.py  test_packets.py
projects/rocprofiler-sdk/source/lib/att-tool/: CMakeLists.txt  att_decoder.h  att_lib_wrapper.hpp  dl.cpp  dl.hpp  perfcounter.cpp  profile_interface.cpp  wave.cpp  wave.hpp
projects/rocprofiler-sdk/source/lib/python/: CMakeLists.txt  utilities.cmake
projects/rocprofiler-sdk/source/scripts/: CMakeLists.txt  run-ci.py
projects/rocprofiler-sdk/tests/rocjpeg/: CMakeLists.txt  conftest.py
projects/rocprofiler-sdk/tests/rocprofv3/internal-threading/: CMakeLists.txt  pthread_wrapper.cpp
projects/rocprofiler-sdk/tests/rocprofv3/rccl-trace/: CMakeLists.txt  validate-single-process.py
rocprofiler-sdk/source/share/rocprofiler-sdk/: CMakeLists.txt
rocprofiler-sdk/tests/pytest-packages/pc_sampling/: CMakeLists.txt
rocprofiler-sdk/tests/pytest-packages/pc_sampling/stochastic/: CMakeLists.txt
rocprofiler-sdk/tests/pytest-packages/pc_sampling/transpose_multiple_agents/: csv.py
rocprofiler-sdk/tests/rocprofv3/advanced-thread-trace/: CMakeLists.txt  att_input.yml.in  validate.py
rocprofiler-sdk/tests/rocprofv3/agent-index/: CMakeLists.txt
rocprofiler-sdk/tests/rocprofv3/negate-aggregate-tracing-options/: CMakeLists.txt
rocprofiler-sdk/tests/rocprofv3/rocjpeg-trace/: CMakeLists.txt  conftest.py  validate.py
source/include/rocprofiler-sdk/rocjpeg/details/: CMakeLists.txt
source/lib/rocprofiler-sdk-att/tests/: CMakeLists.txt  att_decoder_test.cpp  dummy_decoder.cpp  standalone_tool_main.cpp
src/pm4/tests/: CMakeLists.txt
test/: CMakeLists.txt
test/app/: test.cpp
test/ctrl/: test_hsa.cpp
test/integration/: CMakeLists.txt
test/pm4-packets-regression-tests/: CMakeLists.txt  CmakeLists.txt  compare_debug_trace.py  run_regression_test.sh  run_regression_tests.py
test/pm4-packets-regression-tests/baselines/pmc_builder_dump/: PMC_CPC_dump.txt  PMC_CPF_dump.txt  PMC_GCEA_dump.txt  PMC_GCR_dump.txt  PMC_GDS_dump.txt  PMC_GL1A_dump.txt  PMC_GL1C_dump.txt  PMC_GL2A_dump.txt  PMC_GL2C_dump.txt  PMC_GRBM_dump.txt  PMC_GUS_dump.txt  PMC_SPI_dump.txt  PMC_SQ_dump.txt  PMC_SX_dump.txt  PMC_TA_dump.txt  PMC_TCP_dump.txt
test/pm4-packets-regression-tests/baselines/sqtt_builder_dump/: SQTT_dump.txt
test/pm4-packets-regression-tests/generate_dump/: builder_dump.cpp  builder_dump.h
test/tool/: metrics.xml
tests/: CMakeLists.txt  README.md  conftest.py  generate_test_analyze_workloads.py  rocprof-sys-hipEvent-flow.cmake  rocprof-sys-nic-perf.cmake  rocprof-sys-openmp-tests.cmake  rocprof-sys-python-tests.cmake  rocprof-sys-rccl-tests.cmake  rocprof-sys-testing.cmake  rocprof-sys-videodecode-tests.cmake  test_TCP_counters.py  test_analyze_commands.py  test_analyze_workloads.py  test_autogen_config.py  test_db_connector.py  test_gpu_specs.py  test_import_workloads.py  test_profile_general.py  test_utils.py  validate-perfetto-proto.py
tests/amd_smi_test/: CMakeLists.txt  amdsmi_get_gpu_cper_entries.cc  test_base.cc
tests/amd_smi_test/functional/: computepartition_read_write.cc  gpu_metrics_read.cc  memorypartition_read_write.cc  power_cap_read_write.cc
tests/common/: CMakeLists.txt  fwd.h  fwd.hpp
tests/conversion-script/: CMakeLists.txt  input.txt  validate.py
tests/counter-collection/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/page-migration/: CMakeLists.txt  validate.py
tests/pc_sampling/: address_translation.cpp  main.cpp
tests/pytest-packages/pc_sampling/stochastic/csv/: CMakeLists.txt
tests/pytest-packages/pc_sampling/stochastic/json/: CMakeLists.txt
tests/pytest-packages/pc_sampling/transpose_multiple_agents/: CMakeLists.txt
tests/pytest-packages/pytest_utils/: perfetto_reader.py
tests/pytest-packages/tests/: rocprofv3.py
tests/rccl/: CMakeLists.txt  pytest.ini
tests/rdc_tests/: CMakeLists.txt
tests/rocdecode/: CMakeLists.txt  validate.py
tests/rocjpeg/: CMakeLists.txt  validate.py
tests/rocprofiler/: rocprofiler.cpp
tests/rocprofv3/: CMakeLists.txt
tests/rocprofv3-avail/: validate.py
tests/rocprofv3/advanced-thread-trace/: CMakeLists.txt  att_input.json  att_input.yml.in
tests/rocprofv3/agent-index/: CMakeLists.txt
tests/rocprofv3/counter-collection/input1/: validate.py
tests/rocprofv3/counter-collection/kernel_filtering/: validate.py
tests/rocprofv3/counter-collection/list_metrics/: CMakeLists.txt
tests/rocprofv3/counter-collection/range_filtering/: CMakeLists.txt
tests/rocprofv3/hip-stream-display/: CMakeLists.txt  conftest.py
tests/rocprofv3/internal-threading/: CMakeLists.txt  pthread_wrapper.cpp
tests/rocprofv3/memory-allocation/: CMakeLists.txt
tests/rocprofv3/pc-sampling/host-trap/transpose-multiple-agents/: CMakeLists.txt  validate.py
tests/rocprofv3/pc-sampling/stochastic/exec-mask-manipulation/: CMakeLists.txt  conftest.py
tests/rocprofv3/pc-sampling/stochastic/transpose-multiple-agents/: CMakeLists.txt
tests/rocprofv3/rccl-trace/: conftest.py  pytest.ini
tests/rocprofv3/rocdecode-trace/: CMakeLists.txt  validate.py
tests/rocprofv3/rocjpeg-trace/: CMakeLists.txt  conftest.py  validate.py
tests/rocprofv3/rocpd/: CMakeLists.txt
tests/rocprofv3/rocpd-scratch/: validate.py
tests/rocprofv3/scratch-memory/: CMakeLists.txt
tests/rocprofv3/summary/: CMakeLists.txt  validate.py
tests/rocprofv3/tracing/: validate.py
tests/rocprofv3/tracing-hip-in-libraries/: validate.py
tests/rocprofv3/tracing-plus-counter-collection/: validate.py
tests/scratch-memory-tracing/: CMakeLists.txt
tests/thread-trace/: CMakeLists.txt  agent.cpp  multi_dispatch.cpp  single_dispatch.cpp  trace_callbacks.hpp
tests/tools/: json-tool.cpp
(+1527 files in other folders)
